# qtquick_demo

./: CMakeLists.txt  Main.qml  MainForm.ui.qml  MyButton.qml  MyCheckBox.qml  MyComboBox.qml  MyGroupBox.qml  MyTextField.qml  README.md  SideTabButton.qml  images.qrc  main.cpp  page1.qml  page2.qml  page3.qml  serialmanager.cpp  serialmanager.h
